--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body, html {
     margin-left: 0px;
     margin-right: 0px;
     max-width: 100%;
-    background: linear-gradient(blue, white);
+    background: linear-gradient(#607393, #0c2d66);
 }
 
 .splash-picture {
@@ -28,9 +28,11 @@ body, html {
 
 .navbar {
     background-color: #8eb4ce;
-    height: 10vh;
+    height: 5vh;
     width: 80vw;
     margin-left: 10vw;
+    justify-content: space-around;
+    display: flex;
 }
 
 .navbar a:hover {
@@ -40,19 +42,19 @@ body, html {
 
 .navigation {
     height: 100%;
-    width: 11.8vw;
+    width: 20vw;
     cursor: pointer;
     background-color: rgba(150, 150, 150, 0);
     text-decoration: none;
     color: yellow;
-    line-height: 10vh;
+    line-height: 5vh;
     vertical-align: middle;
-    padding-right: 5%;
-    padding-left: 5%;
+    margin: 0;
+    padding: auto;
     text-align: center;
     display: inline-block;
     font-family: 'Work Sans', sans-serif;
-    font-size: 32px;
+    font-size: 28px;
 }
 
 .main-body {
