--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body, html {
 
 .splash-picture {
     /* Image */
-    background-image: url(Images/background-temp.jpg);
+    background-image: url(Images/splash%20page.png);
 
     height: 35vh;
     width: 80vw;
