--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body, html {
-    height: auto;
+    height: 100vh;
     transform: scale(1);
     margin-top: 0px;
     margin-bottom: 0px;
@@ -7,13 +7,15 @@ body, html {
     margin-right: 0px;
     max-width: 100%;
     background: linear-gradient(#607393, #0c2d66);
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .splash-picture {
     /* Image */
     background-image: url(Images/splash%20page%20v2.png);
 
-    height: 25vh;
+    height: 21.5vh;
     width: 80vw;
     margin-left: 10vw;
     background-attachment: scroll;
@@ -68,4 +70,5 @@ body, html {
     height: 100vh;
     width: 80vw;
     margin-left: 10vw;
+    position: absolute;
 }
