--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ body, html {
 }
 
 .logo {
-    height: 10vh;
+    height: 20vh;
     position: absolute;
     display: block;
     bottom: 0;
@@ -73,12 +73,40 @@ body, html {
     position: absolute;
 }
 
-.info-section {
-    margin-left: 3vw;
-    margin-right: 3vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
+.player-info {
+    float: left;
+    margin: 3vw;
+    margin-bottom: 1vh;
+    margin-top: 5vh;
+    padding: 1vw;
     background: green;
     color: white;
     width: 20vw;
+    height: 25vh;
+    font-size: 12px;
+}
+
+.party {
+    float: left;
+    margin: 3vw;
+    margin-top: 3vh;
+    padding: 1vw;
+    background: green;
+    color: white;
+    width: 20vw;
+    height: 30vh;
+    font-size: 12px;
+}
+
+.map {
+    float: right;
+    margin-right: 3vw;
+    margin-top: 5vh;
+    margin-bottom: 3vh;
+    padding: 1vw;
+    background: green;
+    color: white;
+    width: 47vw;
+    height: 63vh;
+    font-size: 18px;
 }
