--- a/front-end-resources/shared-resources/main.css
+++ b/front-end-resources/shared-resources/main.css
@@ -1,257 +1,160 @@
-body {
-  background-image: url("./Backdrop.png");
-  background-color: #bce0ff;
-  height: auto;
-  background-attachment: fixed;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+body    {
+    background-color: #f2f2ed;
+    background-image: url("../shared-resources/Backdrop.png");
+    background-repeat: repeat-x;
+    padding: 0px;
+    margin: 0px;
+    background-size: 1200px;
+    background-attachment: fixed;
 }
 
-.dropbtn {
-  background: linear-gradient(#5996f7, #477dd3);
-  color: white;
-  padding: 8px;
-  border: none;
-  z-index: 1;
-  font-family: Montserrat;
-  font-size: 12px;
-  color: #eaf2ff;
-  margin: 0px;
-  min-width: 100px;
-  height: 40px;
+#logo   {
+    height: 100px;
+    width: 300px;
+    margin: 10px auto;
 }
 
-.dropbtn:hover {
-  background: linear-gradient(#204d93, #477dd3);
-  color: white;
-  font-weight: bold;
-  z-index: 2;
-}
-  
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin: auto;
-  padding: 0px;
+@media only screen and (min-width: 768px)   {
+    .narrow   {
+        display: none;
+    }
 }
 
-.menu-bar {
-  background: linear-gradient(#5996f7, #477dd3);
-  text-align: center;
-  min-width: 730px;
-  height: 40px;
-  position: fixed;
-  width: 100%;
-  margin-top: -40px;
-  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+@media only screen and (max-width: 769px)   {
+    .wide   {
+        display: none;
+    }
 }
 
-.dropdown-content {
-  visibility: hidden;
-  position: absolute;
-  background-color: #f4f8ff;
-  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1);
-  min-width: 100px;
-  z-index: 1;
-  opacity: 0;
+.nav-bot    {
+    background: linear-gradient(#5996f7, #477dd3);
+    min-height: 20px;
+    border: none;
+    box-shadow: 0 0 0 1px #204d93;
+    border-radius: 4px;
 }
 
-.dropdown-content a {
-  font-family: Montserrat;
-  font-size: 12px;
-  color: #6983ad;
-  padding: 6px 16px;
-  text-decoration: none;
-  z-index: 1;
-  display: block;
+
+
+.nav-bot .container-fluid {
+    padding: 0px;
 }
 
-.dropdown-content a:hover {
-  background-color: #EAF2FF
+.nav-bot .container-fluid .navbar-nav .dropdown a    {
+    min-height: 32px;
+    padding: 8px;
+    text-align: center;
+    color: #eaf2ff;
+    border-left: 1px solid #5996f7;
+    border-right: 1px solid #204d93;
+    font-family: Montserrat;
+    text-shadow: 1px 1px #204d93;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-  visibility: visible;
-  opacity: 1;
+.nav-bot .container-fluid .navbar-nav .dropdown a:hover    {
+    color: #fff;
+    background: linear-gradient(#204d93, #477dd3);
+    border-left: 1px solid #204d9300;
+    border-right: 1px solid #204d93;
 }
 
-.main {
-  margin: 40px auto;
-  width: 70%;
-  min-width: 400px;
+.nav-bot .container-fluid .navbar-nav .dropdown:last-child a    {
+    border-right: none;
 }
 
-.container {
-  margin-bottom: 24px;
-  padding: 10px 20px 10px 20px;
-  border-radius: 6px;
-  background-color: rgba(234, 242, 255, .75);
-  box-shadow: 0 0 0 3px #dae3f2, 0 0 0 4px #fff, 0px 3px 15px rgba(0,0,0,0.4);
-  min-width: 700px;
-  overflow: hidden;
+.nav-bot .container-fluid .navbar-nav .dropdown:first-child a    {
+    border-left: none;
 }
 
-#logo {
-  max-width: 300px;
-  max-height: 100px;
-  min-width: 150px;
-  min-height: 50px;
-  width: auto;
-  height: auto;
-  margin: 20px 0px;
-  z-index: -5;
+.nav-bot .container-fluid .navbar-nav .dropdown-toggle:active, .open .dropdown-toggle {
+    background: linear-gradient(#204d93, #477dd3);
+    border-left: 1px solid #204d9300!important;
+    border-right: 1px solid #204d93;
 }
 
-.left-column {
-  float: left;
-  width: 75%;
+.nav-bot .container-fluid .navbar-nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.right-column {
-  float: left;
-  width: 25%;
+.nav-bot .container-fluid .navbar-nav .dropdown {
+    width: 100%;
 }
 
-.content {
-  margin: 10px;
-  padding: 4px 12px 16px 12px;
-  background-color: #f4f8ff;
-  border-radius: 4px;
-  box-shadow: 0 0 0 1px #dae3f2, 0px 3px 5px rgba(0,0,0,0.05);
-  min-height: 100px;
-  overflow: hidden;
+.nav-bot .container-fluid .navbar-nav .dropdown .dropdown-menu {
+    width: inherit;
+    max-width:
+    background-color: #f4f8ff;
+    padding: 0px;
+    border-radius: 0px;
+}
+
+.nav-bot .container-fluid .navbar-nav .dropdown .dropdown-menu li a {
+    text-align: left;
+    border: none;
+    color: #6983ad;
+    background-color: #f4f8ff;
+    text-shadow: none;
+}
+
+.nav-bot .container-fluid .navbar-nav .dropdown .dropdown-menu li a:hover {
+    background-color: #EAF2FF;
+    background-image: none;
+}
+
+.white-back  {
+    background-color: #eaf2ff;
+    margin-bottom: 24px;
+    padding: 2px 0px 10px 0px;
+    border-radius: 6px;
+    background-color: rgba(234, 242, 255, .75);
+    box-shadow: 0 0 0 3px #dae3f2, 0 0 0 4px #fff, 0px 3px 15px rgba(0,0,0,0.4);
+    z-index: -5;
+    overflow: hidden;
+}
+
+.white-box  {
+    margin: 10px -4px;
+    padding: 4px 12px 16px 12px;
+    background-color: #f4f8ff;
+    box-shadow: 1px 1px 0 1px #dae3f2, -1px -1px 0 1px #fff;
+    overflow: hidden;
+    border-radius: 4px;
 }
 
 .header {
-  margin: 8px 0px;
-  background: linear-gradient(#ffb03a, #e56428);
-  border-radius: 2px;
-  border: 1px #558ee8;
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.2);
-  text-align: center;
-  height: 20px;
-  text-decoration: none;
-  font-family: Montserrat;
-  font-size: 14px;
-  color: white;
-  font-weight: 900;
-}
-
-.party-box {
-  margin: 3px;
-  padding: 4px;
-  border-radius: 2px;
-  border-width: 1px;
-  border-color: #dae3f2;
-  border-style: solid;
-  background-color: #EAF2FF;
-  display: block;
-}
-
-.party-box .link {
-  color: #6983ad;
-  text-decoration: none;
-  font-family: Montserrat;
-  font-size: 10px;
-  float: right;
-}
-
-.party-icon {
-  width: 26px;
-  height: 20px;
-  margin-top: 0px;
-  float: left;
-}
-
-.health-bar {
-  height: 6px;
-  background-color: #dae3f2;
-  padding: 1px;
-  margin-top: 8px;
-}
-
-.health {
-  height: 6px;
-  background: linear-gradient(#73d69e, #4da88a);
-  border-radius: 2px;
-}
-
-.exp-bar {
-  height: 4px;
-  background-color: #dae3f2;
-  padding: 1px;
-  margin-top: 0px;
-}
-
-.exp {
-  height: 4px;
-  background: linear-gradient(#b6cbea, #96b2dd);
+    margin-bottom: 10px;
+    background: #ffb03a;
+    border: 1px #558ee8;
+    box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.2);
+    text-align: center;
+    text-decoration: none;
+    font-family: Montserrat;
+    font-size: 18px;
+    padding: 6px;
+    border-radius: 2px;
+    color: white;
 }
 
 .button {
-  display: inline-block;
-  width: 200px;
-  height: 100px;
-  margin: auto;
-  box-shadow: 0 0 0 2px #dae3f2;
-}
-
-.left {
-  float: right;
-}
-
-.right {
-  float: left;
+    display: inline-block;
+    width: 200px;
+    height: 100px;
+    margin: 2px;
+    box-shadow: 0 0 0 2px #dae3f2;
+    float: center;
 }
 
 .button:hover {
     opacity: .7;
 }
 
-p {
-  color: #363738;
-  text-decoration: none;
-  font-family: Montserrat;
-  font-size: 12px;
-  margin: 2px 12px;
+.centered   {
+    text-align: center;
 }
 
-.icon {
-  float: left;
-  margin: 2px 12px;
-  height: 28px;
-  width: 28px;
-  box-shadow: 0 0 0 1px #dae3f2;
+ul  {
+    list-style-type: none;
+    padding: 0px;
 }
-
-
-
-.name {
-  color: #6983ad;
-  text-decoration: none;
-  font-family: Montserrat;
-  font-size: 12px;
-  font-weight: bold;
-  margin: 0px 12px 20px 12px;
-}
-
-.name:hover {
-  text-decoration: underline;
-}
-
-.link:hover {
-  text-decoration: underline;
-}
-
-.centering {
-  text-align: center;
-}
-
-.hidden {
-  display: none;
-}
-
-
