--- a/front-end-resources/shared-resources/main.css
+++ b/front-end-resources/shared-resources/main.css
@@ -6,6 +6,7 @@ body    {
     margin: 0px;
     background-size: 1200px;
     background-attachment: fixed;
+    min-width: 460px;
 }
 
 #logo   {
@@ -18,12 +19,46 @@ body    {
     .narrow   {
         display: none;
     }
+    .party-box  {
+        width: 100%;
+        padding: 0px;
+        
+    }
+    .party-info {
+        padding: 2px 6px;
+    }
 }
 
 @media only screen and (max-width: 769px)   {
     .wide   {
         display: none;
     }
+    .party-box  {
+        width: 100px;
+    }
+}
+
+.nav-top    {
+    border: none;
+    box-shadow: 0px 1px 5px #00000040;
+}
+
+.nav-top .container-fluid .navbar-header    {
+    background: linear-gradient(#5996f7, #477dd3);
+    border-bottom: 1px solid #204d93;
+}
+
+.nav-top .container-fluid .navbar-header button {
+    border: 1px solid #204d9300;
+    background: linear-gradient(#5996f7, #477dd3);
+}
+
+.nav-top .container-fluid .navbar-header button:hover   {
+    background: linear-gradient(#204d93, #477dd3);
+}
+
+.nav-top .container-fluid .navbar-header button:active   {
+    background: linear-gradient(#204d93, #477dd3);
 }
 
 .nav-bot    {
@@ -33,8 +68,6 @@ body    {
     box-shadow: 0 0 0 1px #204d93;
     border-radius: 4px;
 }
-
-
 
 .nav-bot .container-fluid {
     padding: 0px;
@@ -47,7 +80,7 @@ body    {
     color: #eaf2ff;
     border-left: 1px solid #5996f7;
     border-right: 1px solid #204d93;
-    font-family: Montserrat;
+    font-family: 'Aldrich';
     text-shadow: 1px 1px #204d93;
 }
 
@@ -84,8 +117,6 @@ body    {
 
 .nav-bot .container-fluid .navbar-nav .dropdown .dropdown-menu {
     width: inherit;
-    max-width:
-    background-color: #f4f8ff;
     padding: 0px;
     border-radius: 0px;
 }
@@ -109,7 +140,7 @@ body    {
     padding: 2px 0px 10px 0px;
     border-radius: 6px;
     background-color: rgba(234, 242, 255, .75);
-    box-shadow: 0 0 0 3px #dae3f2, 0 0 0 4px #fff, 0px 3px 15px rgba(0,0,0,0.4);
+    box-shadow: 0 0 0 3px #dae3f2, 0 0 0 4px #fff, 0px 3px 15px #00000080;
     z-index: -5;
     overflow: hidden;
 }
@@ -130,11 +161,16 @@ body    {
     box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.2);
     text-align: center;
     text-decoration: none;
-    font-family: Montserrat;
+    font-family: 'Aldrich';
     font-size: 18px;
+    font-weight: 900;
     padding: 6px;
     border-radius: 2px;
     color: white;
+    text-shadow: 1px 1px #c17400;
+    border-top: 1px solid #ffdfaf;
+    border-left: 1px solid #ffdfaf;
+    border-bottom: 1px solid #c17400;
 }
 
 .button {
@@ -157,4 +193,98 @@ body    {
 ul  {
     list-style-type: none;
     padding: 0px;
+}
+
+p   {
+    font-family: 'Montserrat';
+    color: #757575;
+}
+
+.media-body p   {
+    margin: 0px 10px;
+}
+
+table   {
+    font-family: 'Montserrat';
+    color: #757575;
+}
+
+.table tbody tr td  {
+    border-top: 1px solid #dae3f2;
+    
+}
+
+.table tbody tr:hover  {
+    background-color: #EAF2FF;
+}
+
+.table thead tr th  {
+    border-bottom: 3px solid #dae3f2;
+}
+
+.party-box  {
+    background-color: #dae3f280;
+    margin: 2px;
+    height: 40px;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 0 0 2px #dae3f2;
+}
+
+.party-box .media-body p    {
+    font-size: 8px;
+    font-family: 'Aldrich';
+    color: #757575;
+}
+
+.party-box:hover    {
+    opacity: 0.5;
+}
+
+.party-info {
+    position: relative;
+    font-size: 10px;
+}
+
+.party-img  {
+    position: absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
+    opacity: 0.2;
+    width: 70px;
+}
+
+.health-bar {
+    background-color: #dae3f2;
+    margin-top: 8px;
+}
+
+.health {
+    height: 2px;
+}
+
+h1  {
+    color: #eaf2ff;
+    font-size: 16px;
+    font-family: 'Aldrich';
+    font-weight: 900;
+    text-align: center;
+    line-height: 0px;
+}
+
+.party-box:hover  {
+    text-decoration: none;
+}
+
+.media-left img {
+    width: 28px;
+    height: 20px;
+}
+
+.party  {
+    text-align: center;
 }
