--- a/front-end-resources/shared-resources/main.css
+++ b/front-end-resources/shared-resources/main.css
@@ -20,7 +20,7 @@ body    {
 }
 
 #map    {
-    background-image: url(Oak%20Village.png);
+    background-image: url(../pages/Map/Images/Oak%20Village.png);
 }
 
 @media only screen and (min-width: 768px)   {
